erDiagram

  agency {
    int     year              PK
    varchar agency_num        PK
    boolean home_rule_ind
    bigint  cty_cook_eav
    double  total_ext
  }

  agency_info {
    varchar agency_num         PK
    varchar agency_name
    varchar major_type
  }

  agency_crosswalk {
    varchar agency_num         PK
    varchar agency_num_final
  }

  agency_fund {
    int     year               PK
    varchar agency_num         PK
    varchar fund_num           PK
    bigint  final_levy
    double  final_rate
  }

  agency_fund_info {
    varchar agency_num         PK
    varchar fund_num           PK
    varchar fund_name
    boolean capped_ind
  }

  agency_fund_crosswalk {
    varchar agency_num         PK
    varchar agency_num_final
    varchar fund_num           PK
    varchar fund_num_final
  }

  cpi {
    int     year
    double  cpi
    double  ptell_cook
    int     levy_year          PK
  }

  eq_factor {
    int     year               PK
    double  eq_factor_tentative
    double  eq_factor_final
  }

  metadata {
    varchar db_version
    varchar requires_pkg_version
    int     data_year_min
    int     data_year_max
  }

  pin {
    int     year               PK
    varchar pin                PK
    varchar class
  }

  pin_geometry {
    int     year
    varchar pin10
    text    geometry
  }

  tax_code {
    int     year               PK
    varchar agency_num         PK
    double  agency_rate
    varchar tax_code_num       PK
    double  tax_code_rate
  }

  tif {
    int     year               PK
    varchar agency_num         PK
    double  prev_year_revenue
    double  curr_year_revenue
    int     first_year
    boolean cancelled_this_year
  }

  tif_crosswalk {
    int     year
    varchar agency_num_dist
    varchar agency_num_final
  }

  tif_distribution {
    int     year               PK
    varchar agency_num         PK
    varchar tax_code_num       PK
    double  tax_code_distribution_pct
  }

  pin_tif_distribution {
    int     year               PK
    varchar pin                PK
    varchar agency_num         PK
    varchar tax_code_num
    double  pin_distribution_pct
  }

  eq_factor ||--|{ pin : "applies to"
  pin ||--|{ tax_code : "within"
  pin ||--o| pin_tif_distribution : "may have"
  cpi ||--|{ agency : "applies to"
  tax_code }|--|| agency : "has"
  tax_code ||--o| tif_distribution : "may have"
  agency ||--|{ agency_fund : "contains"
  agency ||--o| agency_crosswalk : "may have"
  agency_info ||--|{ agency : "describes"
  agency_fund ||--o| agency_fund_crosswalk : "may have"
  agency_fund_info ||--|{ agency_fund : "describes"
  tif ||--|| tif_crosswalk : "in"
  tif_distribution }|--|| tif_crosswalk : "in"
  pin_tif_distribution }|--|| tif_crosswalk : "in"
  agency_info ||--o{ tif: "describes"
  tax_code }|--o| tif : "may have"
  pin_geometry ||--o| pin : "has"
